# resourcemaxxing

./: README.md  cpu-max.py  gpu-max.py  main.py  main.spec  maximalizer.py  pyproject.toml  ram-max.py  requirements.txt  resource-max.py
.github/workflows/: build.yml  pypi.yml
tests/: cpu.py  gpu.py  ram.py
